# onboard_deep_sogm

./: .gitignore  bridge.yaml  build_all.sh  build_catkin.sh  build_elo_ws.sh  build_pkg.sh  build_ros1_bridge.sh  check_custom_bridge_msgs.sh  clean_wrappers.sh  collider.sh  compile_wrappers.sh  elo.code-workspace  nohup.txt  nohup2.txt  nohup_bridge.txt  py_pubsub.sh  ros1_bridge.sh  rviz_colli.sh  rviz_teb.sh  teb-exp.rviz  teb_modified.sh  teb_normal.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
old_scripts/: build_pkg.sh  collider.sh
rviz/: colli-exp.rviz  keenan.rviz  normal-exp.rviz  replay-stairs.rviz  teb-exp.rviz
scripts/: .Xresources  build_catkin.sh  build_catkin_keenan.sh  build_elo_ws.sh  build_ros1_bridge.sh  check_custom_bridge_msgs.sh  clean_wrappers.sh  collider.sh  compile_wrappers.sh  keenan.sh  map_new_env.sh  nav_teb_sogm.sh  nohup_bridge.txt  nohup_point_slam.txt  nohup_record.txt  nohup_sogm.txt  nohup_teb.txt  py_pubsub.sh  replay_rosbag.sh  rosbag_keenan.sh  rosbag_record.sh  rviz_colli.sh  rviz_keenan.sh  rviz_teb.sh  simu_collider.sh  sogm_exp.sh  split_rosbag.sh  (+4 more)
src/deep_sogm/: package.xml  setup.cfg  setup.py
src/deep_sogm/deep_sogm/: fast_collider.py  fast_collider_data.py
src/deep_sogm/deep_sogm/cpp_wrappers/src/polar_processing/: polar_processing.cpp  polar_processing.h
src/deep_sogm/deep_sogm/models/: architectures.py
src/deep_sogm/deep_sogm/utils/: config.py  mayavi_visu.py  pc2_numpy.py  trainer.py
src/deep_sogm/launch/: simu_launch.py  sogm_launch.py  sogm_nopub_launch.py
(+75 files in other folders)
